# Real_time_hybrid_ML_intrusion_detection

./: .env.example  .gitignore  HARDENING_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PROJECT_RUNBOOK.md  QUICK_REFERENCE.md  README.md  SECURITY.md  pyproject.toml  render.yaml  requirements.txt  setup_credentials.py
dashboard/: __init__.py  app.py
dashboard/templates/: 404.html  500.html  alerts.html  base.html  blocked.html  dashboard.html  login.html  logs.html  status.html  traffic.html
logs/: blocked_ips.json  intrusion_logs.csv
ml/: __init__.py  feature_selection.py  hybrid_decision.py  preprocess.py  train_kmeans.py  train_rf.py
realtime/: __init__.py  detector.py  detector_service.py  feature_extractor.py  packet_sniffer.py  prevention.py
tests/: test_system.py
utils/: config.py  download_dataset.py  logger.py
